@startuml
class Account {
    id
    name
    fullName
    email
    authenticationSource
    role
}

class Project {
    id
}

class Authorisations {
}

class GlobalRole <<global>> {
    id
    name
    description
}

class ProjectRole <<global>> {
    id
    name
    description
}

class ProjectRoleAssociation {
    projectId
}

Account *--> "1" Authorisations: authorisations

Authorisations o--> "0..1" GlobalRole: globalRole
Authorisations *--> "0..*" ProjectRoleAssociation: projectRoleAssociations

ProjectRoleAssociation o--> "1" ProjectRole: projectRole

ProjectRoleAssociation ..> "1" Project
@enduml
